<resources>
    <string name="app_name">MedTrach</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pharmacy">Pharmacy</string>
    <string name="menu_drugs">Drugs</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="drug_description">Drug Description</string>
    <string name="drug_name">Drug Name</string>
    <string name="pharmacy_location">Pharmacy Location</string>
    <string name="search">Search</string>
    <string name="add_drugs">Add Drugs</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="maps_api_key">AIzaSyBl5MEJvaKveEKEo_-Js_8PolRKXIm0-vM</string>
    <string name="log_out">Log Out</string>
</resources>