<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_catalogue"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/drug_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_name"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/drug_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_description"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/ic_baseline_description_24"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent"
                />

            <TextView
                android:id="@+id/card_view_pharmacy_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_name"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/ic_baseline_store_24"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/card_view_pharmacy_location_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_location"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>